--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "ts-node --project tsconfig.json --require dotenv/config src/main.ts"
   },
   "dependencies": {
-    "chatgpt": "^4.5.0",
+    "chatgpt": "3.5.1",
+    "dotenv": "^16.0.3",
     "dotenv-config": "^0.1.1",
     "nanoid": "^4.0.1",
+    "puppeteer": "^19.7.1",
     "ws": "^8.12.1",
     "zod": "^3.20.6"
   },
